# wasm4-test

./: Cargo.toml  README.md  justfile
src/: lib.rs  wasm4.rs
