[package]
name = "wasm4-test-cart"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "cart"

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
bitflags = "1.3.2"
bitvec = "1.0.1"
modular-bitfield = "0.11.2"
